graphite-server/internal/cypher/generated/cypher_parser.go
// Code generated from graphite-cypher/src/main/antlr/CypherParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package generated // CypherParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type CypherParser struct {
	*antlr.BaseParser
}

var CypherParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func cypherparserParserInit() {
	staticData := &CypherParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'='", "'+='", "'=~'", "'<='", "'>='", "'<>'", "'>'", "'<'", "'..'",
		"';'", "'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'-'",
		"'+'", "'/'", "'%'", "'^'", "'*'", "':'", "'|'", "'$'", "'CALL'", "'YIELD'",
		"'FILTER'", "'EXTRACT'", "'COUNT'", "'ANY'", "'NONE'", "'SINGLE'", "'ALL'",
		"'ASC'", "'ASCENDING'", "'BY'", "'CREATE'", "'DELETE'", "'DESC'", "'DESCENDING'",
		"'DETACH'", "'EXISTS'", "'LIMIT'", "'MATCH'", "'MERGE'", "'ON'", "'OPTIONAL'",
		"'ORDER'", "'REMOVE'", "'RETURN'", "'SET'", "'SKIP'", "'WHERE'", "'WITH'",
		"'UNION'", "'UNWIND'", "'AND'", "'AS'", "'CONTAINS'", "'DISTINCT'",
		"'ENDS'", "'IN'", "'IS'", "'NOT'", "'OR'", "'STARTS'", "'XOR'", "'FALSE'",
		"'TRUE'", "'NULL'", "'CONSTRAINT'", "'DO'", "'FOR'", "'REQUIRE'", "'UNIQUE'",
		"'CASE'", "'WHEN'", "'THEN'", "'ELSE'", "'END'", "'MANDATORY'", "'SCALAR'",
		"'OF'", "'ADD'", "'DROP'",
	}
	staticData.SymbolicNames = []string{
		"", "ASSIGN", "ADD_ASSIGN", "REGEX", "LE", "GE", "NOT_EQUAL", "GT",
		"LT", "RANGE", "SEMI", "DOT", "COMMA", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "LBRACK", "RBRACK", "SUB", "PLUS", "DIV", "MOD", "CARET",
		"MULT", "COLON", "STICK", "DOLLAR", "CALL", "YIELD", "FILTER", "EXTRACT",
		"COUNT", "ANY", "NONE", "SINGLE", "ALL", "ASC", "ASCENDING", "BY", "CREATE",
		"DELETE", "DESC", "DESCENDING", "DETACH", "EXISTS", "LIMIT", "MATCH",
		"MERGE", "ON", "OPTIONAL", "ORDER", "REMOVE", "RETURN", "SET", "SKIP_W",
		"WHERE", "WITH", "UNION", "UNWIND", "AND", "AS", "CONTAINS", "DISTINCT",
		"ENDS", "IN", "IS", "NOT", "OR", "STARTS", "XOR", "FALSE", "TRUE", "NULL_W",
		"CONSTRAINT", "DO", "FOR", "REQUIRE", "UNIQUE", "CASE", "WHEN", "THEN",
		"ELSE", "END", "MANDATORY", "SCALAR", "OF", "ADD", "DROP", "ID", "ESC_LITERAL",
		"STRING_LITERAL", "HEX_INTEGER", "OCTAL_INTEGER", "FLOAT_LITERAL", "INTEGER_LITERAL",
		"WS", "COMMENT", "LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"script", "statement", "query", "regularQuery", "unionSt", "singleQuery",
		"clause", "matchSt", "unwindSt", "withSt", "returnSt", "whereSt", "orderBySt",
		"orderItem", "skipSt", "limitSt", "returnItems", "returnItem", "createSt",
		"deleteSt", "setSt", "setItem", "removeSt", "removeItem", "mergeSt",
		"patternList", "patternPart", "patternElement", "nodePattern", "nodeLabels",
		"relationshipPattern", "leftArrow", "rightArrow", "dash", "relationDetail",
		"relationshipTypes", "rangeLiteral", "properties", "expression", "orExpression",
		"xorExpression", "andExpression", "notExpression", "comparisonExpression",
		"compOp", "stringPredicateExpression", "stringPredicateSuffix", "addSubExpression",
		"multDivExpression", "powerExpression", "unaryExpression", "postfixExpression",
		"subscriptOrSlice", "atomExpression", "functionInvocation", "functionName",
		"caseExpression", "caseWhen", "caseElse", "listComprehension", "predicateFunction",
		"parameter", "literal", "integerLiteral", "floatLiteral", "stringLiteral",
		"listLiteral", "mapLiteral", "mapPair", "expressionList", "variable",
		"labelName", "relTypeName", "propertyKeyName", "symbolicName",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// CypherParserInit initializes any static state used to implement CypherParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewCypherParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CypherParserInit() {
	staticData := &CypherParserParserStaticData
	staticData.once.Do(cypherparserParserInit)
}

// NewCypherParser produces a new parser instance for the optional input antlr.TokenStream.
func NewCypherParser(input antlr.TokenStream) *CypherParser {
	CypherParserInit()
	this := new(CypherParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &CypherParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "CypherParser.g4"

	return this
}

// CypherParser tokens.
const (
	CypherParserEOF             = antlr.TokenEOF
	CypherParserASSIGN          = 1
	CypherParserADD_ASSIGN      = 2
	CypherParserREGEX           = 3
	CypherParserLE              = 4
	CypherParserGE              = 5
	CypherParserNOT_EQUAL       = 6
	CypherParserGT              = 7
	CypherParserLT              = 8
	CypherParserRANGE           = 9
	CypherParserSEMI            = 10
	CypherParserDOT             = 11
	CypherParserCOMMA           = 12
	CypherParserLPAREN          = 13
	CypherParserRPAREN          = 14
	CypherParserLBRACE          = 15
	CypherParserRBRACE          = 16
	CypherParserLBRACK          = 17
	CypherParserRBRACK          = 18
	CypherParserSUB             = 19
	CypherParserPLUS            = 20
	CypherParserDIV             = 21
	CypherParserMOD             = 22
	CypherParserCARET           = 23
	CypherParserMULT            = 24
	CypherParserCOLON           = 25
	CypherParserSTICK           = 26
	CypherParserDOLLAR          = 27
	CypherParserCALL            = 28
	CypherParserYIELD           = 29
	CypherParserFILTER          = 30
	CypherParserEXTRACT         = 31
	CypherParserCOUNT           = 32
	CypherParserANY             = 33
	CypherParserNONE            = 34
	CypherParserSINGLE          = 35
	CypherParserALL             = 36
	CypherParserASC             = 37
	CypherParserASCENDING       = 38
	CypherParserBY              = 39
	CypherParserCREATE          = 40
	CypherParserDELETE          = 41
	CypherParserDESC            = 42
	CypherParserDESCENDING      = 43
	CypherParserDETACH          = 44
	CypherParserEXISTS          = 45
	CypherParserLIMIT           = 46
	CypherParserMATCH           = 47
	CypherParserMERGE           = 48
	CypherParserON              = 49
	CypherParserOPTIONAL        = 50
	CypherParserORDER           = 51
	CypherParserREMOVE          = 52
	CypherParserRETURN          = 53
	CypherParserSET             = 54
	CypherParserSKIP_W          = 55
	CypherParserWHERE           = 56
	CypherParserWITH            = 57
	CypherParserUNION           = 58
	CypherParserUNWIND          = 59
	CypherParserAND             = 60
	CypherParserAS              = 61
	CypherParserCONTAINS        = 62
	CypherParserDISTINCT        = 63
	CypherParserENDS            = 64
	CypherParserIN              = 65
	CypherParserIS              = 66
	CypherParserNOT             = 67
	CypherParserOR              = 68
	CypherParserSTARTS          = 69
	CypherParserXOR             = 70
	CypherParserFALSE           = 71
	CypherParserTRUE            = 72
	CypherParserNULL_W          = 73
	CypherParserCONSTRAINT      = 74
	CypherParserDO              = 75
	CypherParserFOR             = 76
	CypherParserREQUIRE         = 77
	CypherParserUNIQUE          = 78
	CypherParserCASE            = 79
	CypherParserWHEN            = 80
	CypherParserTHEN            = 81
	CypherParserELSE            = 82
	CypherParserEND             = 83
	CypherParserMANDATORY       = 84
	CypherParserSCALAR          = 85
	CypherParserOF              = 86
	CypherParserADD             = 87
	CypherParserDROP            = 88
	CypherParserID              = 89
	CypherParserESC_LITERAL     = 90
	CypherParserSTRING_LITERAL  = 91
	CypherParserHEX_INTEGER     = 92
	CypherParserOCTAL_INTEGER   = 93
	CypherParserFLOAT_LITERAL   = 94
	CypherParserINTEGER_LITERAL = 95
	CypherParserWS              = 96
	CypherParserCOMMENT         = 97
	CypherParserLINE_COMMENT    = 98
)

// CypherParser rules.
const (
	CypherParserRULE_script                    = 0
	CypherParserRULE_statement                 = 1
	CypherParserRULE_query                     = 2
	CypherParserRULE_regularQuery              = 3
	CypherParserRULE_unionSt                   = 4
	CypherParserRULE_singleQuery               = 5
	CypherParserRULE_clause                    = 6
	CypherParserRULE_matchSt                   = 7
	CypherParserRULE_unwindSt                  = 8
	CypherParserRULE_withSt                    = 9
	CypherParserRULE_returnSt                  = 10
	CypherParserRULE_whereSt                   = 11
	CypherParserRULE_orderBySt                 = 12
	CypherParserRULE_orderItem                 = 13
	CypherParserRULE_skipSt                    = 14
	CypherParserRULE_limitSt                   = 15
	CypherParserRULE_returnItems               = 16
	CypherParserRULE_returnItem                = 17
	CypherParserRULE_createSt                  = 18
	CypherParserRULE_deleteSt                  = 19
	CypherParserRULE_setSt                     = 20
	CypherParserRULE_setItem                   = 21
	CypherParserRULE_removeSt                  = 22
	CypherParserRULE_removeItem                = 23
	CypherParserRULE_mergeSt                   = 24
	CypherParserRULE_patternList               = 25
	CypherParserRULE_patternPart               = 26
	CypherParserRULE_patternElement            = 27
	CypherParserRULE_nodePattern               = 28
	CypherParserRULE_nodeLabels                = 29
	CypherParserRULE_relationshipPattern       = 30
	CypherParserRULE_leftArrow                 = 31
	CypherParserRULE_rightArrow                = 32
	CypherParserRULE_dash                      = 33
	CypherParserRULE_relationDetail            = 34
	CypherParserRULE_relationshipTypes         = 35
	CypherParserRULE_rangeLiteral              = 36
	CypherParserRULE_properties                = 37
	CypherParserRULE_expression                = 38
	CypherParserRULE_orExpression              = 39
	CypherParserRULE_xorExpression             = 40
	CypherParserRULE_andExpression             = 41
	CypherParserRULE_notExpression             = 42
	CypherParserRULE_comparisonExpression      = 43
	CypherParserRULE_compOp                    = 44
	CypherParserRULE_stringPredicateExpression = 45
	CypherParserRULE_stringPredicateSuffix     = 46
	CypherParserRULE_addSubExpression          = 47
	CypherParserRULE_multDivExpression         = 48
	CypherParserRULE_powerExpression           = 49
	CypherParserRULE_unaryExpression           = 50
	CypherParserRULE_postfixExpression         = 51
	CypherParserRULE_subscriptOrSlice          = 52
	CypherParserRULE_atomExpression            = 53
	CypherParserRULE_functionInvocation        = 54
	CypherParserRULE_functionName              = 55
	CypherParserRULE_caseExpression            = 56
	CypherParserRULE_caseWhen                  = 57
	CypherParserRULE_caseElse                  = 58
	CypherParserRULE_listComprehension         = 59
	CypherParserRULE_predicateFunction         = 60
	CypherParserRULE_parameter                 = 61
	CypherParserRULE_literal                   = 62
	CypherParserRULE_integerLiteral            = 63
	CypherParserRULE_floatLiteral              = 64
	CypherParserRULE_stringLiteral             = 65
	CypherParserRULE_listLiteral               = 66
	CypherParserRULE_mapLiteral                = 67
	CypherParserRULE_mapPair                   = 68
	CypherParserRULE_expressionList            = 69
	CypherParserRULE_variable                  = 70
	CypherParserRULE_labelName                 = 71
	CypherParserRULE_relTypeName               = 72
	CypherParserRULE_propertyKeyName           = 73
	CypherParserRULE_symbolicName              = 74
)

// IScriptContext is an interface to support dynamic dispatch.
type IScriptContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext
	EOF() antlr.TerminalNode
	AllSEMI() []antlr.TerminalNode
	SEMI(i int) antlr.TerminalNode

	// IsScriptContext differentiates from other interfaces.
	IsScriptContext()
}

type ScriptContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyScriptContext() *ScriptContext {
	var p = new(ScriptContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_script
	return p
}

func InitEmptyScriptContext(p *ScriptContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_script
}

func (*ScriptContext) IsScriptContext() {}

func NewScriptContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ScriptContext {
	var p = new(ScriptContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CypherParserRULE_script

	return p
}

func (s *ScriptContext) GetParser() antlr.Parser { return s.parser }

func (s *ScriptContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ScriptContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ScriptContext) EOF() antlr.TerminalNode {
	return s.GetToken(CypherParserEOF, 0)
}

func (s *ScriptContext) AllSEMI() []antlr.TerminalNode {
	return s.GetTokens(CypherParserSEMI)
}

func (s *ScriptContext) SEMI(i int) antlr.TerminalNode {
	return s.GetToken(CypherParserSEMI, i)
}

func (s *ScriptContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ScriptContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ScriptContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CypherParserVisitor:
		return t.VisitScript(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CypherParser) Script() (localctx IScriptContext) {
	localctx = NewScriptContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CypherParserRULE_script)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(150)
		p.Statement()
	}
	p.SetState(155)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(151)
				p.Match(CypherParserSEMI)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(152)
				p.Statement()
			}

		}
		p.SetState(157)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(159)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == CypherParserSEMI {
		{
			p.SetState(158)
			p.Match(CypherParserSEMI)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(161)
		p.Match(CypherParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Query() IQueryContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CypherParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Query() IQueryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQueryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CypherParserVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CypherParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CypherParserRULE_statement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(163)
		p.Query()
	}

	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	RegularQuery() IRegularQueryContext

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_query
	return p
}

func InitEmptyQueryContext(p *QueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_query
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CypherParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) RegularQuery() IRegularQueryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegularQueryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegularQueryContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case CypherParserVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *CypherParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CypherParserRULE_query)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(165)
		p.RegularQuery()
	}

	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IRegularQueryContext is an interface to support dynamic dispatch.
type IRegularQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSingleQuery() []ISingleQueryContext
	SingleQuery(i int) ISingleQueryContext
	AllUnionSt() []IUnionStContext
	UnionSt(i int) IUnionStContext

	// IsRegularQueryContext differentiates from other interfaces.
	IsRegularQueryContext()
}

type RegularQueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRegularQueryContext() *RegularQueryContext {
	var p = new(RegularQueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_regularQuery
	return p
}

func InitEmptyRegularQueryContext(p *RegularQueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CypherParserRULE_regularQuery
}

func (*RegularQueryContext) IsRegularQueryContext() {}
